Get back original index page

--- a/index.html
+++ b/index.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Richelbilderbeek.GitHub.io by richelbilderbeek</title>
+<head>
+    <title>Richel Bilderbeek's GitHub website</title>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
-        <h1>Richelbilderbeek.GitHub.io</h1>
-        <h2>My GitHub website</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/richelbilderbeek" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h1>
-<a id="empty-page" class="anchor" href="#empty-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Empty page</h1>
-      </section>
-    </div>
-
-    
+    <h1>Richel Bilderbeek's GitHub website</h1>
+    <p>
+      <a href="LonelierPong/LonelierPong.html">Lonelier Pong</a>
+    </p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <h2>External links</h2>
+    <p>
+      <a href="https://github.com/richelbilderbeek">My GitHub profile page</a>
+      <a href="http://www.richelbilderbeek.nl">My static HTML website</a>
+    </p>
   </body>
 </html>
