use bulleted list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <h1>Richel Bilderbeek's GitHub website</h1>
   <p>&nbsp;</p>
   <p>
-    <a href="LonelierPong/LonelierPong.html">Lonelier Pong</a>
+    <ul>
+      <li><a href="LonelierPong/LonelierPong.html">Lonelier Pong</a></li>
+    </ul>
   </p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -17,8 +19,10 @@
   <p>&nbsp;</p>
   <h2>External links</h2>
   <p>
-    <a href="https://github.com/richelbilderbeek">My GitHub profile page</a>
-    <a href="http://www.richelbilderbeek.nl">My static HTML website</a>
+    <ul>
+      <li><a href="https://github.com/richelbilderbeek">My GitHub profile page</a></li>
+      <li><a href="http://www.richelbilderbeek.nl">My static HTML website</a></li>
+    </ul>
   </p>
 </body>
 </html>
