--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
   <h1>Richel Bilderbeek's GitHub website</h1>
   <p>&nbsp;</p>
+  <p>My Processing games:</p>
+  <p>&nbsp;</p>
   <p>
     <ul>
       <li><a href="LonelierPong/LonelierPong.html">Lonelier Pong</a></li>
