Improved style and text

--- a/LonelierPong.html
+++ b/LonelierPong.html
@@ -1,14 +1,42 @@
 <html>
-  <head>
-    <title>Lonelier Pong</title>
-    <link rel="stylesheet" type="text/css" href="../style.css"></link>
-  </head>
-  <body>
-    <h3>Lonelier Pong</h3>
-    <script src="../processing.js"></script>
-    <canvas data-processing-sources="LonelierPong.pde"></canvas>
-    <p>
-      <a href="../index.html">Go back</a>
-    </p>
-  </body>
+<head>
+  <title>Lonelier Pong</title>
+  <link rel="stylesheet" type="text/css" href="../style.css"></link>
+</head>
+<body>
+  <h1>Lonelier Pong</h1>
+  <script src="../processing.js"></script>
+  <p>&nbsp;</p>
+  <canvas data-processing-sources="LonelierPong.pde"></canvas>
+  <p>&nbsp;</p>
+  <p>
+    <a href="../index.html">Go back to menu</a>
+  </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>About</h2>
+  <p>
+    LonelierPong is a 1 player pong game, written in Processing.
+  </p>
+  <p>&nbsp;</p>
+  <p>
+    The name and gameplay of LonelierPong is inspired on 
+    <a href="https://github.com/thijsvb">Thijs van Beers</a>' smash hit 
+    <a href="https://github.com/thijsvb/thijsvb.github.io/tree/master/LonelyPong">LonelyPong</a>.
+  </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>External links</p>
+  <p>
+    <ul>
+      <li><a href="https://github.com/richelbilderbeek/LonelierPong">The LonelierPong GitHub</a></li>
+    </ul>
+  </p>
+</body>
 </html>
