--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Richel Bilderbeek's GitHub website</title>
-  <link rel="stylesheet" type="text/css" href="style.css"></link>
+  <link rel="stylesheet" type="text/css" href="richelbilderbeek.css"></link>
 </head>
 <body>
   <h1>Richel Bilderbeek's GitHub website</h1>
