--- a/LonelierPong/LonelierPong.html
+++ b/LonelierPong/LonelierPong.html
@@ -1,16 +1,16 @@
 <html>
 <head>
   <title>Lonelier Pong</title>
-  <link rel="stylesheet" type="text/css" href="../style.css"></link>
+  <link rel="stylesheet" type="text/css" href="../richelbilderbeek.css"></link>
 </head>
 <body>
   <h1>Lonelier Pong</h1>
   <script src="../processing.js"></script>
   <p>&nbsp;</p>
-  <canvas data-processing-sources="LonelierPong.pde"></canvas>
+  <center><canvas data-processing-sources="LonelierPong.pde"></canvas></center>
   <p>&nbsp;</p>
   <p>
-    <a href="../index.html">Go back to menu</a>
+    <center><a href="../index.html">Go back to menu</a></center>
   </p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
