Also center title

--- a/LonelierPong.html
+++ b/LonelierPong.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="../richelbilderbeek.css"></link>
 </head>
 <body>
-  <h1>Lonelier Pong</h1>
+  <center><h1>Lonelier Pong</h1></center>
   <script src="../processing.js"></script>
   <p>&nbsp;</p>
   <center><canvas data-processing-sources="LonelierPong.pde"></canvas></center>
