--- a/LonelierPong/LonelierPong.html
+++ b/LonelierPong/LonelierPong.html
@@ -18,6 +18,7 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <h2>About</h2>
+  <p>&nbsp;</p>
   <p>
     LonelierPong is a 1 player pong game, written in Processing.
   </p>
@@ -32,7 +33,8 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <h2>External links</p>
+  <h2>External links</h2>
+  <p>&nbsp;</p>
   <p>
     <ul>
       <li><a href="https://github.com/richelbilderbeek/LonelierPong">The LonelierPong GitHub</a></li>
