--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <h2>External links</h2>
+  <p>&nbsp;</p>
   <p>
     <ul>
       <li><a href="https://github.com/richelbilderbeek">My GitHub profile page</a></li>
