--- a/LonelierPong/LonelierPong.html
+++ b/LonelierPong/LonelierPong.html
@@ -9,10 +9,26 @@
   <p>&nbsp;</p>
   <center><canvas data-processing-sources="LonelierPong.pde"></canvas></center>
   <p>&nbsp;</p>
+  <p>Click below here to actively play the game...</p>
+  <p>&nbsp;</p>
   <p>
     <center><a href="../index.html">Go back to menu</a></center>
   </p>
   <p>&nbsp;</p>
+  <p>Click above here to actively play the game...</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>Controls</h2>
+  <p>&nbsp;</p>
+  <p>
+    <ul>
+      <li>Left arrow: Put paddle at left side</li>
+      <li>Right arrow: Move paddle towards the right</li>
+    </ul>
+  </p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
