--- a/LonelierPong.html
+++ b/LonelierPong.html
@@ -4,19 +4,28 @@
   <link rel="stylesheet" type="text/css" href="../richelbilderbeek.css"></link>
 </head>
 <body>
-  <h1><center>Lonelier Pong</center></h1>
   <script src="../processing.js"></script>
+  <p><a href="../index.html">Go back</a>.</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h1><center>Lonelier Pong</center></h1>
   <p>&nbsp;</p>
   <center><canvas data-processing-sources="LonelierPong.pde"></canvas></center>
   <p>&nbsp;</p>
-  <p>Click below here to actively play the game...</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>Goal</h2>
   <p>&nbsp;</p>
   <p>
-    <center><a href="../index.html">Go back to menu</a></center>
+    Goal of the game is to bounce the ball back and forth indefinitely.
+    There is no score to display your progress, as I preferred few
+    lines of code over a competitive gaming experience.
   </p>
-  <p>&nbsp;</p>
-  <p>Click above here to actively play the game...</p>
-  <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -56,5 +65,11 @@
       <li><a href="https://github.com/richelbilderbeek/LonelierPong">The LonelierPong GitHub</a></li>
     </ul>
   </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p><a href="../index.html">Go back</a>.</p>
 </body>
 </html>
