--- a/LonelierPong/LonelierPong.html
+++ b/LonelierPong/LonelierPong.html
@@ -23,6 +23,9 @@
   <p>&nbsp;</p>
   <p>
     Goal of the game is to bounce the ball back and forth indefinitely.
+  </p>
+  <p>&nbsp;</p>
+  <p>
     There is no score to display your progress, as I preferred few
     lines of code over a competitive gaming experience.
   </p>
