--- a/LonelierPong/LonelierPong.html
+++ b/LonelierPong/LonelierPong.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Lonelier Pong</title>
+  <title>LonelierPong</title>
   <link rel="stylesheet" type="text/css" href="../richelbilderbeek.css"></link>
 </head>
 <body>
@@ -11,7 +11,7 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <h1><center>Lonelier Pong</center></h1>
+  <h1><center>LonelierPong</center></h1>
   <p>&nbsp;</p>
   <center><canvas data-processing-sources="LonelierPong.pde"></canvas></center>
   <p>&nbsp;</p>
@@ -22,7 +22,7 @@
   <h2>Goal</h2>
   <p>&nbsp;</p>
   <p>
-    Goal of the game is to bounce the ball back and forth indefinitely.
+    Goal of LonelierPong is to bounce the ball back and forth indefinitely.
   </p>
   <p>&nbsp;</p>
   <p>
