Put code of gmes in main folder

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <li><a href="LonelierPong/LonelierPong.html">Lonelier Pong</a></li>
     </ul>
     <ul>
-      <li><a href="Pron/Pron.html">Prong</a></li>
+      <li><a href="Pron/Pron.html">Pron</a></li>
     </ul>
     <ul>
       <li><a href="Prong/Prong.html">Prong</a></li>
     </ul>
     <ul>
-      <li><a href="ProtonTank/ProtonTank.html">Prong</a></li>
+      <li><a href="ProtonTank/ProtonTank.html">ProtonTank</a></li>
     </ul>
     <ul>
-      <li><a href="ProPokeVolley/ProPokeVolley.html">Prong</a></li>
+      <li><a href="ProPokeVolley/ProPokeVolley.html">ProPokeVolley</a></li>
     </ul>
   </p>
   <p>&nbsp;</p>
