--- a/Pron.html
+++ b/Pron.html
@@ -19,6 +19,41 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
+  <h2>Gameplay</h2>
+  <p>&nbsp;</p>
+  <p>Goal is to make the other play bump into a non-black pixel.</p>
+  <p>&nbsp;</p>
+  <p>The world is donut-shaped.</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>Controls</h2>
+  <p>&nbsp;</p>
+  <ul>
+    <li><code>a</code>: blue player turn left</li>
+    <li><code>d</code>: blue player turn right</li>
+    <li>arrow left: red player turn left</li>
+    <li>arrow right: red player turn right</li>
+  </ul>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>External links</h2>
+  <p>&nbsp;</p>
+  <p>
+    <ul>
+      <li><a href="https://github.com/richelbilderbeek/Pron">The Pron GitHub</a></li>
+    </ul>
+  </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <p><a href="../index.html">Go back</a>.</p>
 </body>
 </html>
