--- a/ProtonTank.html
+++ b/ProtonTank.html
@@ -19,6 +19,66 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
+  <h2>Gameplay</h2>
+  <p>&nbsp;</p>
+  <p>
+    ProtonTank ('Processing Team Operation Tank') is a four-player game, 
+    in which a duo controls a tank and has to shoot the opponent tank.
+  </p>
+  <p>&nbsp;</p>
+  <p>
+    Controlling a tank is done as a team, 
+    as each player controls a wheel and the cannon. 
+    The tank will fire if both players want to fire and there is no bullet in the arena.
+  </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>Controls</h2>
+  <p>&nbsp;</p>
+  <p>Player 1 (left wheel of red tank):</p>
+  <ul>
+    <li><code>q</code>: move forward</li>
+    <li><code>a</code>: shoot</li>
+    <li><code>z</code>: move backward</li>
+  </ul>
+  <p>Player 2 (right wheel of red tank):</p>
+  <ul>
+    <li><code>u</code>: move forward</li>
+    <li><code>j</code>: shoot</li>
+    <li><code>m</code>: move backward</li>
+  </ul>
+  <p>Player 3 (left wheel of blue tank):</p>
+  <ul>
+    <li><code>r</code>: move forward</li>
+    <li><code>f</code>: shoot</li>
+    <li><code>v</code>: move backward</li>
+  </ul>
+  <p>Player 4 (right wheel of blue tank):</p>
+  <ul>
+    <li><code>p</code>: move forward</li>
+    <li><code>;</code>: shoot</li>
+    <li><code>/</code>: move backward</li>
+  </ul>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>External links</h2>
+  <p>&nbsp;</p>
+  <p>
+    <ul>
+      <li><a href="https://github.com/richelbilderbeek/ProtonTank">The ProtonTank GitHub</a></li>
+    </ul>
+  </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <p><a href="../index.html">Go back</a>.</p>
 </body>
 </html>
