--- a/ProPokeVolley/ProPokeVolley.html
+++ b/ProPokeVolley/ProPokeVolley.html
@@ -19,6 +19,33 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
+  <h2>Controls</h2>
+  <p>&nbsp;</p>
+  <ul>
+    <li><code>A</code>: left player move left</li>
+    <li><code>D</code>: left player move right</li>
+    <li><code>W</code>: left player jumps</li>
+    <li>Arrow left: right player move left</li>
+    <li>Arrow right: right player move right</li>
+    <li>Arrow up: right player jumps</li>
+  </ul>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>External links</h2>
+  <p>&nbsp;</p>
+  <p>
+    <ul>
+      <li><a href="https://github.com/richelbilderbeek/ProPokeVolley">The ProPokeVolley GitHub</a></li>
+    </ul>
+  </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <p><a href="../index.html">Go back</a>.</p>
 </body>
 </html>
