--- a/Prong/Prong.html
+++ b/Prong/Prong.html
@@ -19,6 +19,45 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
+  <h2>Gameplay</h2>
+  <p>&nbsp;</p>
+  <p>Prong ia cooperative Pong game.</p>
+  <p>Players 1 and 3 control the upper red paddle. Players 2 and 4 control the lower blue paddle.</p>
+  <p>Goal is to never let the ball pass your team's paddle, and to get the ball to pass the other team's paddle.</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>Controls</h2>
+  <p>&nbsp;</p>
+  <ul>
+    <li><code>a</code>: player 1 left</li>
+    <li><code>s</code>: player 1 right</li>
+    <li><code>h</code>: player 2 left</li>
+    <li><code>j</code>: player 2 right</li>
+    <li><code>'</code>: player 3 left</li>
+    <li><code>\</code>: player 3 right</li>
+    <li>arrow left: player 4 left</li>
+    <li>arrow right: player 4 right</li>
+  </ul>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <h2>External links</h2>
+  <p>&nbsp;</p>
+  <p>
+    <ul>
+      <li><a href="https://github.com/richelbilderbeek/Prong">The Prong GitHub</a></li>
+    </ul>
+  </p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <p><a href="../index.html">Go back</a>.</p>
 </body>
 </html>
